--- a/ProfileMatch.Components/Admin/AdminCategoryList.razor
+++ b/ProfileMatch.Components/Admin/AdminCategoryList.razor
@@ -1,13 +1,13 @@
-﻿<MudButton OnClick="(()=>CategoryCreate())" Class="pa-2 mx-2" Variant="Variant.Filled" Color="Color.Primary">Add New</MudButton>
-<MudSwitch @bind-Checked="@hover" Color="Color.Primary">Hover</MudSwitch>
-<MudSwitch @bind-Checked="@dense" Color="Color.Secondary">Dense</MudSwitch>
-<MudSwitch @bind-Checked="@striped" Color="Color.Tertiary">Striped</MudSwitch>
-<MudSwitch @bind-Checked="@bordered" Color="Color.Warning">Bordered</MudSwitch>
+﻿<MudButton OnClick="(()=>CategoryCreate())" Class="pa-2 mx-2" Variant="Variant.Filled" Color="Color.Primary">@L["Add New"]</MudButton>
+<MudSwitch @bind-Checked="@hover" Color="Color.Primary">@L["Hover"]</MudSwitch>
+<MudSwitch @bind-Checked="@dense" Color="Color.Secondary">@L["Dense"]</MudSwitch>
+<MudSwitch @bind-Checked="@striped" Color="Color.Tertiary">@L["Striped"]</MudSwitch>
+<MudSwitch @bind-Checked="@bordered" Color="Color.Warning">@L["Bordered"]</MudSwitch>
 <MudTable Items="@Categories" Dense="@dense" Hover="@hover" Bordered="@bordered" Striped="@striped" Filter="new Func<Category,bool>(FilterFunc1)" @bind-SelectedItem="selectedItem1">
     <ToolBarContent>
-        <MudText Typo="Typo.h6">Categories</MudText>
+        <MudText Typo="Typo.h6">@L["Categories"]</MudText>
         <MudSpacer />
-        <MudTextField @bind-Value="searchString1" Placeholder="Search" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
+        <MudTextField @bind-Value="searchString1" Placeholder=@L["Search"] Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
     </ToolBarContent>
     <ColGroup>
         <col />
@@ -16,21 +16,21 @@
         <col />
     </ColGroup>
     <HeaderContent>
-        <MudTh>Name</MudTh>
-        <MudTh>Description</MudTh>
-        <MudTh>Questions</MudTh>
-        <MudTh>Actions</MudTh>
+        <MudTh>@L["Name"]</MudTh>
+        <MudTh>@L["Description"]</MudTh>
+        <MudTh>@L["Questions"]</MudTh>
+        <MudTh>@L["Actions"]</MudTh>
     </HeaderContent>
     <RowTemplate>
-        <MudTd DataLabel="Name">@context.Name</MudTd>
-        <MudTd DataLabel="Description">@context.Description</MudTd>
-        <MudTd DataLabel="Questions">@context.Questions.Count</MudTd>
-        <MudTd DataLabel="Edit">
-            <MudButton OnClick="((e)=>CategoryUpdate(context))" Color="Color.Tertiary">Edit Category</MudButton>
-            <MudButton OnClick="((e)=>QuestionCreate(context))" Color="Color.Success">Add Question</MudButton>
+        <MudTd DataLabel=@L["Name"]>@context.Name</MudTd>
+        <MudTd DataLabel=@L["Description"]>@context.Description</MudTd>
+        <MudTd DataLabel=@L["Questions"]>@context.Questions.Count</MudTd>
+        <MudTd DataLabel=@L["Edit"]>
+            <MudButton OnClick="((e)=>CategoryUpdate(context))" Color="Color.Tertiary">@L["Edit Category"]</MudButton>
+            <MudButton OnClick="((e)=>QuestionCreate(context))" Color="Color.Success">@L["Add Question"]</MudButton>
         </MudTd>
     </RowTemplate>
     <PagerContent>
-        <MudTablePager />
+        <MudTablePager RowsPerPageString=@L["Rows per page"] />
     </PagerContent>
 </MudTable>
