--- a/ProfileMatch.Components/Admin/AdminPeopleList.razor
+++ b/ProfileMatch.Components/Admin/AdminPeopleList.razor
@@ -1,35 +1,35 @@
-﻿<MudSwitch @bind-Checked="@_dense" Color="Color.Secondary">Dense</MudSwitch>
-<MudButton Link="/admin/edituser" Class="pa-2 mx-2" Variant="Variant.Filled" Color="Color.Primary">Add New</MudButton>
+﻿<MudSwitch @bind-Checked="@_dense" Color="Color.Secondary">@L["Dense"]</MudSwitch>
+<MudButton Link="/admin/edituser" Class="pa-2 mx-2" Variant="Variant.Filled" Color="Color.Primary">@L["Add New"]</MudButton>
 @if (Users == null)
 {
     <MudProgressLinear Color="Color.Primary" Indeterminate="true" Class="my-7" />
 }
 else
 {
-    <MudTable Items="@Users" Dense="@_dense" Filter="new Func<ApplicationUser,bool>(FilterFunc1)" SortLabel="Sort By">
+    <MudTable Items="@Users" Dense="@_dense" Filter="new Func<ApplicationUser,bool>(FilterFunc1)" SortLabel=@L["Sort By"]>
         <ToolBarContent>
-            <MudText Typo="Typo.h6">People Administration</MudText>
+            <MudText Typo="Typo.h6">@L["People Administration"]</MudText>
             <MudSpacer />
 
-            <MudTextField @bind-Value="SearchString" Placeholder="Search" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
+            <MudTextField @bind-Value="SearchString" Placeholder=@L["Search"] Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
         </ToolBarContent>
         <HeaderContent>
-            <MudTh><MudTableSortLabel SortBy="new Func<ApplicationUser, object>(x=>x.Department.Name)" SortLabel="Department" T="ApplicationUser">Department</MudTableSortLabel></MudTh>
-            <MudTh>Photo</MudTh>
-            <MudTh><MudTableSortLabel SortBy="new Func<ApplicationUser, object>(x=>x.FirstName)" SortLabel="First Name" T="ApplicationUser">First Name</MudTableSortLabel></MudTh>
-            <MudTh><MudTableSortLabel SortBy="new Func<ApplicationUser, object>(x=>x.LastName)" SortLabel="Last Name" T="ApplicationUser">Last Name</MudTableSortLabel></MudTh>
-            <MudTh><MudTableSortLabel SortBy="new Func<ApplicationUser, object>(x=>x.DateOfBirth?.Date)" SortLabel="Date Of Birth" T="ApplicationUser">Birth Date</MudTableSortLabel></MudTh>
-            <MudTh><MudTableSortLabel SortBy="new Func<ApplicationUser, object>(x=>x.IsActive)" SortLabel="Is Active" T="ApplicationUser">Is Active</MudTableSortLabel></MudTh>
-            <MudTh>Edit</MudTh>
-            <MudTh>Profile</MudTh>
+            <MudTh><MudTableSortLabel SortBy="new Func<ApplicationUser, object>(x=>x.Department.Name)" SortLabel=@L["Department"] T="ApplicationUser">@L["Department"]</MudTableSortLabel></MudTh>
+            <MudTh>@L["Photo"]</MudTh>
+            <MudTh><MudTableSortLabel SortBy="new Func<ApplicationUser, object>(x=>x.FirstName)" SortLabel=@L["First Name"] T="ApplicationUser">@L["First Name"]</MudTableSortLabel></MudTh>
+            <MudTh><MudTableSortLabel SortBy="new Func<ApplicationUser, object>(x=>x.LastName)" SortLabel=@L["Last Name"] T="ApplicationUser">@L["Last Name"]</MudTableSortLabel></MudTh>
+            <MudTh><MudTableSortLabel SortBy="new Func<ApplicationUser, object>(x=>x.DateOfBirth?.Date)" SortLabel=@L["Date Of Birth"] T="ApplicationUser">@L["Birth Date"]</MudTableSortLabel></MudTh>
+            <MudTh><MudTableSortLabel SortBy="new Func<ApplicationUser, object>(x=>x.IsActive)" SortLabel=@L["Is Active"] T="ApplicationUser">@L["Is Active"]</MudTableSortLabel></MudTh>
+            <MudTh>@L["Edit"]</MudTh>
+            <MudTh>@L["Profile"]</MudTh>
         </HeaderContent>
         <RowTemplate>
-            <MudTd DataLabel="Department">@(context.Department==null? "unassigned" : context.Department.Name)</MudTd>
-            <MudTd DataLabel="Photo"><MudAvatar Image="@context.PhotoPath" Size="Size.Large" /></MudTd>
-            <MudTd DataLabel="First Name">@context.FirstName</MudTd>
-            <MudTd DataLabel="Last Name">@context.LastName</MudTd>
-            <MudTd DataLabel="Date Of Birth">@context.DateOfBirth</MudTd>
-            <MudTd DataLabel="Is Active"><MudCheckBox Disabled="true" @bind-Checked="@context.IsActive"></MudCheckBox></MudTd>
+            <MudTd DataLabel=@L["Department"]>@(context.Department==null? "unassigned" : context.Department.Name)</MudTd>
+            <MudTd DataLabel=@L["Photo"]><MudAvatar Image="@context.PhotoPath" Size="Size.Large" /></MudTd>
+            <MudTd DataLabel=@L["First Name"]>@context.FirstName</MudTd>
+            <MudTd DataLabel=@L["Last Name"]>@context.LastName</MudTd>
+            <MudTd DataLabel=@L["Date Of Birth"]>@context.DateOfBirth</MudTd>
+            <MudTd DataLabel=@L["Is Active"]><MudCheckBox Disabled="true" @bind-Checked="@context.IsActive"></MudCheckBox></MudTd>
             <MudTd DataLabel="">
                 <MudFab Color="Color.Primary" OnClick="@(()=> EditProfile(context))" Icon="@Icons.Material.Filled.Edit" Size="Size.Small" IconSize="Size.Small" />
             </MudTd>
@@ -38,7 +38,7 @@ else
             </MudTd>
         </RowTemplate>
         <PagerContent>
-            <MudTablePager RowsPerPageString="Next people" />
+            <MudTablePager RowsPerPageString=@L["Next people"] />
         </PagerContent>
     </MudTable>
 
