--- a/ProfileMatch.Components/Dialogs/AdminLevelDialog.razor
+++ b/ProfileMatch.Components/Dialogs/AdminLevelDialog.razor
@@ -1,11 +1,11 @@
 ﻿<MudDialog>
     <DialogContent>
         <MudForm @ref="Form">
-            <MudTextField T="string" @bind-Value="@TempDescription" Immediate="true" Label="Level Description" Required="true" RequiredError="Level Description is required!" Lines="5" MaxLength="1500" />
+            <MudTextField T="string" @bind-Value="@TempDescription" Immediate="true" Label=@L["Level Description"] Required="true" RequiredError=@L["Level Description is required!"] Lines="5" MaxLength="1500" />
         </MudForm>
     </DialogContent>
     <DialogActions>
-        <MudButton OnClick="Cancel">Cancel</MudButton>
-        <MudButton Color="Color.Error" OnClick="HandleSave">Save</MudButton>
+        <MudButton OnClick="Cancel">@L["Cancel"]</MudButton>
+        <MudButton Color="Color.Error" OnClick="HandleSave">@L["Save"]</MudButton>
     </DialogActions>
 </MudDialog>
