--- a/ProfileMatch.Components/Authentication/Reset.razor
+++ b/ProfileMatch.Components/Authentication/Reset.razor
@@ -1,8 +1,10 @@
-﻿<MudText Typo="Typo.h4" GutterBottom="true">Set new password</MudText>
+﻿@inject IStringLocalizer<LanguageService> L
 
-<MudTextField @bind-Value="@Password" Label="New Password" Variant="Variant.Outlined" InputType="@PasswordInput" Adornment="Adornment.End" AdornmentIcon="@PasswordInputIcon" OnAdornmentClick="TogglePasswordVisibility" Class="my-4" />
+<MudText Typo="Typo.h4" GutterBottom="true">@L["Set new password"]</MudText>
 
-<MudButton Variant="Variant.Filled" Color="Color.Primary" Link="/pages/authentication/login" Size="Size.Large" FullWidth="true" Class="mt-2">Set New Password</MudButton>
+<MudTextField @bind-Value="@Password" Label=@L["New Password"] Variant="Variant.Outlined" InputType="@PasswordInput" Adornment="Adornment.End" AdornmentIcon="@PasswordInputIcon" OnAdornmentClick="TogglePasswordVisibility" Class="my-4" />
+
+<MudButton Variant="Variant.Filled" Color="Color.Primary" Link="/pages/authentication/login" Size="Size.Large" FullWidth="true" Class="mt-2">@L["Set New Password"]</MudButton>
 
 @code {
     string Password { get; set; }
