--- a/ProfileMatch.Components/Dialogs/AdminCategoryDialog.razor
+++ b/ProfileMatch.Components/Dialogs/AdminCategoryDialog.razor
@@ -1,12 +1,12 @@
 ﻿<MudDialog>
     <DialogContent>
         <MudForm @ref="Form">
-            <MudTextField T="string" @bind-Value="@TempName" Immediate="true" Label="Category Name" Required="true" RequiredError="Category name is required!" />
-            <MudTextField T="string" @bind-Value="@TempDescription" Immediate="true" Label="Category Description" Lines="5" />
+            <MudTextField T="string" @bind-Value="@TempName" Immediate="true" Label=@L["Category Name"] Required="true" RequiredError=@L["Category name is required!"] />
+            <MudTextField T="string" @bind-Value="@TempDescription" Immediate="true" Label=@L["Category Description"] Lines="5" />
         </MudForm>
     </DialogContent>
     <DialogActions>
-        <MudButton OnClick="Cancel">Cancel</MudButton>
-        <MudButton Color="Color.Error" OnClick="HandleSave">Save</MudButton>
+        <MudButton OnClick="Cancel">@L["Cancel"]</MudButton>
+        <MudButton Color="Color.Error" OnClick="HandleSave">@L["Save"]</MudButton>
     </DialogActions>
 </MudDialog>
