--- a/ProfileMatch.Components/Dialogs/AdminUserDialog.razor
+++ b/ProfileMatch.Components/Dialogs/AdminUserDialog.razor
@@ -1,6 +1,6 @@
 ﻿@if (EditedUser == null || Departments == null)
 {
-    <p>loading</p>
+    <p>@L["loading"]</p>
 }
 else
 {
@@ -19,7 +19,7 @@ else
                            T="int"
                            OffsetY="true"
                            CloseIcon="@Icons.Material.Filled.LocationCity"
-                           HelperText="Select Department"
+                           HelperText=@L["Select Department"]
                            AdornmentColor="Color.Tertiary">
                     @foreach (var dept in Departments)
                     {
@@ -29,17 +29,17 @@ else
 
                 <MudSwitch @bind-Checked="@EditedUser.IsActive"
                            T="bool"
-                           Label="Is Active?"
+                           Label=@L["Is Active?"]
                            Color="Color.Success" />
-                <MudTextField T="string" @bind-Value="@EditedUser.FirstName" Immediate="true" Label="First Name"
-                              Required="true" RequiredError="Person name is required!" />
-                <MudTextField T="string" @bind-Value="@EditedUser.LastName" Immediate="true" Label="Last Name" Required="true" RequiredError="Person name is required!" />
-                <MudTextField T="string" Label="Email" @bind-Value="@EditedUser.Email" Required="true" RequiredError="Email is required!" />
+                <MudTextField T="string" @bind-Value="@EditedUser.FirstName" Immediate="true" Label=@L["First Name"]
+                              Required="true" RequiredError=@L["Person name is required!"] />
+                <MudTextField T="string" @bind-Value="@EditedUser.LastName" Immediate="true" Label=@L["Last Name"] Required="true" RequiredError=@L["Person name is required!"] />
+                <MudTextField T="string" Label="Email" @bind-Value="@EditedUser.Email" Required="true" RequiredError=@L["Email is required!"] />
 
-                <MudSelect T="Gender?" Label="Select Gender" @bind-Value="@EditedUser.Gender"
+                <MudSelect T="Gender?" Label=@L["Select Gender"] @bind-Value="@EditedUser.Gender"
                            OffsetY="true"
                            CloseIcon="@Icons.Material.Filled.LocationCity"
-                           HelperText="Select Gender"
+                           HelperText=@L["Select Gender"]
                            AdornmentColor="Color.Tertiary">
                     @foreach (Gender? g in Enum.GetValues(typeof(Gender)))
                     {
@@ -50,11 +50,11 @@ else
                                Required="true"
                                Rounded="true"
                                Elevation="1"
-                               RequiredError="BirthDate is Required"
-                               Label="Select Date of Birth"
+                               RequiredError=@L["BirthDate is Required"]
+                               Label=@L["Select Date of Birth"]
                                Editable="false" />
             </MudForm>
-            <MudButton OnClick="@HandleSave">Save</MudButton>
+            <MudButton OnClick="@HandleSave">@L["Save"]</MudButton>
         </DialogContent>
     </MudDialog>
 }
