--- a/ProfileMatch.Components/Layout/MainLayout.razor
+++ b/ProfileMatch.Components/Layout/MainLayout.razor
@@ -14,10 +14,10 @@
                         <MudIconButton Icon="@Icons.Material.Outlined.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
                     </MudHidden>
                     <MudHidden Breakpoint="Breakpoint.Xs">
-                        <MudText Typo="Typo.h6" Class="ml-4">People Match</MudText>
+                        <MudText Typo="Typo.h6" Class="ml-4">@L["People Match"]</MudText>
                     </MudHidden>
                     <MudHidden Breakpoint="Breakpoint.Xs" Invert="true">
-                        <MudText Typo="Typo.subtitle2">People Match</MudText>
+                        <MudText Typo="Typo.subtitle2">@L["People Match"]</MudText>
                     </MudHidden>
                     <MudSpacer />
                     <UserLoginDisplay />
@@ -32,11 +32,11 @@
                                 <UserCard Class="mt-n2" />
                             </CascadingValue>
                             <MudDivider Class="mb-2" />
-                            <MudListItem Text="Account" Icon="@Icons.Material.Outlined.Person" Href="/user/dashboard" />
+                            <MudListItem Text=@L["Account"] Icon="@Icons.Material.Outlined.Person" Href="/user/dashboard" />
 
-                            <MudListItem Text="Logout" Icon="@Icons.Material.Outlined.Login">
+                            <MudListItem Text=@L["Logout"] Icon="@Icons.Material.Outlined.Login">
                                 <form method="post" action="Identity/Account/LogOut">
-                                    <button type="submit">Log out</button>
+                                    <button type="submit">@L["Log out"]</button>
                                 </form>
                             </MudListItem>
                         </ChildContent>
