--- a/ProfileMatch.Components/Layout/NavMenu.razor
+++ b/ProfileMatch.Components/Layout/NavMenu.razor
@@ -1,7 +1,7 @@
 ﻿<UserCard Style="background-color: var(--mud-palette-drawer-background);color: var(--mud-palette-drawer-text);" />
 <MudDivider Class="mb-4" />
 <MudNavMenu>
-    <MudNavLink Href="user/dashboard" Icon="@Icons.Material.Outlined.Dashboard">Dashboard</MudNavLink>
-    <MudNavLink Href="manager/dashboard" Icon="@Icons.Material.Outlined.Dashboard">Manager</MudNavLink>
-    <MudNavLink Href="admin/dashboard" Icon="@Icons.Material.Outlined.Dashboard">Administration</MudNavLink>
+    <MudNavLink Href="user/dashboard" Icon="@Icons.Material.Outlined.Dashboard">@L["Dashboard"]</MudNavLink>
+    <MudNavLink Href="manager/dashboard" Icon="@Icons.Material.Outlined.Dashboard">@L["Manager"]</MudNavLink>
+    <MudNavLink Href="admin/dashboard" Icon="@Icons.Material.Outlined.Dashboard">@L["Administration"]</MudNavLink>
 </MudNavMenu>
