--- a/ProfileMatch.Sites/Admin/AdminDashboard.razor
+++ b/ProfileMatch.Sites/Admin/AdminDashboard.razor
@@ -3,20 +3,20 @@
     <Authorized>
         <MudText Typo="Typo.h5" Color="Color.Primary" Class="mb-4">@L["admindashboard"]</MudText>
         <MudTabs Elevation="1" Rounded="true" PanelClass="mt-6">
-            <MudTabPanel Text="Users">
+            <MudTabPanel Text=@L["Users"]>
                 <AdminPeopleList />
             </MudTabPanel>
-            <MudTabPanel Text="Administration"><Administration /></MudTabPanel>
-            <MudTabPanel Text="Departments">
+            <MudTabPanel Text=@L["Administration"]><Administration /></MudTabPanel>
+            <MudTabPanel Text=@L["Departments"]>
                 <AdminDepartmentList />
             </MudTabPanel>
-            <MudTabPanel Text="Statistics" Icon="@Icons.Material.Filled.Portrait">
+            <MudTabPanel Text=@L["Statistics"] Icon="@Icons.Material.Filled.Portrait">
             </MudTabPanel>
-            <MudTabPanel Text="Categories"><AdminCategoryList /></MudTabPanel>
-            <MudTabPanel Text="Questions"><AdminQuestionList /></MudTabPanel>
+            <MudTabPanel Text=@L["Categories"]><AdminCategoryList /></MudTabPanel>
+            <MudTabPanel Text=@L["Questions"]><AdminQuestionList /></MudTabPanel>
         </MudTabs>
     </Authorized>
     <NotAuthorized>
-        <p>You're not loggged in as Admin.</p>
+        <p>@L["You're not loggged in as Admin."]</p>
     </NotAuthorized>
 </AuthorizeView>
