Adding cards  with questions and answers

--- a/ProfileMatch.Sites/Admin/AdminDashboard.razor
+++ b/ProfileMatch.Sites/Admin/AdminDashboard.razor
@@ -14,6 +14,7 @@
             </MudTabPanel>
             <MudTabPanel Text="Categories"><AdminCategoryList /></MudTabPanel>
             <MudTabPanel Text="Questions"><AdminQuestionList /></MudTabPanel>
+            <MudTabPanel Text="Cards"><AdminCards /></MudTabPanel>
         </MudTabs>
     </Authorized>
     <NotAuthorized>
