--- a/ProfileMatch.Components/User/UserCertList.razor
+++ b/ProfileMatch.Components/User/UserCertList.razor
@@ -13,10 +13,10 @@
     </HeaderContent>
     <RowTemplate>
         <MudTd DataLabel="#">@context.Number</MudTd>
-        <MudTd DataLabel="Employee">@context.Sign</MudTd>
-        <MudTd DataLabel="Cert name">@context.Name</MudTd>
-        <MudTd DataLabel="Date of issue">@context.Position</MudTd>
-        <MudTd DataLabel="File">
+        <MudTd DataLabel=@L["Employee"]>@context.Sign</MudTd>
+        <MudTd DataLabel=@L["Cert name"]>@context.Name</MudTd>
+        <MudTd DataLabel=@L["Date of issue"]>@context.Position</MudTd>
+        <MudTd DataLabel=@L["File"]>
             @if (files != null)
             {
                 <MudText Typo="@Typo.h6">@files.Count() File@(files.Count() == 1 ? "" : "s"):</MudText>
@@ -30,27 +30,27 @@
                 </MudList>
             }
         </MudTd>
-        <MudTd DataLabel="Edit">
+        <MudTd DataLabel=@L["Edit"]>
 
             <InputFile id="fileInput" OnChange="UploadFiles" hidden multiple />
-            <MudFab HtmlTag="label"
+            <MudFab HtmlTag=@L["label"]
                     Color="Color.Primary"
                     Icon="@Icons.Filled.AttachFile"
                     for="fileInput" />
         </MudTd>
     </RowTemplate>
     <PagerContent>
-        <MudTablePager PageSizeOptions="new int[]{50, 100}" />
+        <MudTablePager RowsPerPageString=@L["Rows per page"] PageSizeOptions="new int[]{50, 100}" />
     </PagerContent>
     <FooterContent>
-        <MudTd colspan="5">Select All</MudTd>
+        <MudTd colspan="5">@L["Select All"]</MudTd>
     </FooterContent>
 </MudTable>
 
-<MudText Inline="true">Selected items: @(selectedItems1==null ? "" : string.Join(", ", selectedItems1.OrderBy(x=>x.Number).Select(x=>x.Number)))</MudText>
-<MudText Inline="true">Selected items: @(selectedItems2==null ? "" : string.Join(", ", selectedItems2.OrderBy(x=>x.Number).Select(x=>x.Number)))</MudText>
+<MudText Inline="true">@L["Selected items"]: @(selectedItems1==null ? "" : string.Join(", ", selectedItems1.OrderBy(x=>x.Number).Select(x=>x.Number)))</MudText>
+<MudText Inline="true">@L["Selected items"]: @(selectedItems2==null ? "" : string.Join(", ", selectedItems2.OrderBy(x=>x.Number).Select(x=>x.Number)))</MudText>
 
 <br />
 
-<MudButton @onclick="AddCert" Variant="Variant.Filled" Color="Color.Primary">Add Certificate</MudButton>
-<MudButton @onclick="DelCert" Variant="Variant.Filled" Color="Color.Primary">Delete</MudButton>
+<MudButton @onclick="AddCert" Variant="Variant.Filled" Color="Color.Primary">@L["Add Certificate"]</MudButton>
+<MudButton @onclick="DelCert" Variant="Variant.Filled" Color="Color.Primary">@L["Delete"]</MudButton>
