--- a/ProfileMatch.Sites/Admin/AdminDashboard.razor
+++ b/ProfileMatch.Sites/Admin/AdminDashboard.razor
@@ -12,9 +12,9 @@
             </MudTabPanel>
             <MudTabPanel Text=@L["Statistics"] Icon="@Icons.Material.Filled.Portrait">
             </MudTabPanel>
-            <MudTabPanel Text="Categories"><AdminCategoryList /></MudTabPanel>
-            <MudTabPanel Text="Questions"><AdminQuestionList /></MudTabPanel>
-            <MudTabPanel Text="Cards"><AdminCards /></MudTabPanel>
+            <MudTabPanel Text=@L["Categories"]><AdminCategoryList /></MudTabPanel>
+            <MudTabPanel Text=@L["Questions"]><AdminQuestionList /></MudTabPanel>
+            <MudTabPanel Text=@L["Cards"]><AdminCards /></MudTabPanel>
         </MudTabs>
     </Authorized>
     <NotAuthorized>
