--- a/ProfileMatch.Components/User/UserAbout.razor
+++ b/ProfileMatch.Components/User/UserAbout.razor
@@ -30,7 +30,7 @@
 <br>
 
 <MudExpansionPanels MultiExpansion="true">
-    <MudExpansionPanel Text=@L["What is impotrant to me at work"]>
+    <MudExpansionPanel Text=@L["What is important to me at work"]>
         <MudListItem Text="This day everything happend. The quick, brown fox jumps over a lazy dog." IconColor="Color.Primary" Icon="@Icons.Filled.Bookmark" />
         <MudListItem Text="Single List Item" Icon="@Icons.Filled.Bookmark" IconColor="Color.Success" />
         <MudListItem Text="Single List Item" Icon="@Icons.Filled.Bookmark" IconColor="Color.Secondary" />
